fix(layout): fix white space in contact form and add readme

--- a/styles/Connect.module.css
+++ b/styles/Connect.module.css
@@ -43,6 +43,10 @@
   font-size: 15px;
 }
 
+.inputContainer input:focus {
+  box-shadow: 0px 2px 10px #1ec09a7e;
+}
+
 .left form button {
   width: 200px;
   height: 50px;
@@ -53,6 +57,12 @@
   font-weight: bold;
   outline: none;
   cursor: pointer;
+  transition: all ease 200ms;
+}
+
+.left form button:focus,
+.left form button:hover {
+  background: #15886d;
 }
 
 .buttonValidate {
