--- a/styles/ContactForm.module.css
+++ b/styles/ContactForm.module.css
@@ -37,6 +37,7 @@
 .form h2 {
   color: var(--hover);
   font-size: 35px;
+  margin: 10px;
 }
 
 .inputBox {
@@ -81,23 +82,6 @@
   font-weight: bold;
   font-size: 18px;
   cursor: pointer;
-}
-.footer {
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  flex-wrap: wrap;
-}
-.brandIcon {
-  font-size: 25px;
-  color: white;
-  margin: 10px 20px 10px;
-  cursor: pointer;
-  transition: all ease 200ms;
-}
-.brandIcon:hover {
-  color: var(--hover);
 }
 
 .error {
